# omstu-algorithms-6

./: main.py  pyproject.toml
lab-10/: main.py
lab-10/__marimo__/session/: main.py.json
lab-4/: main.py  main.save.py
lab-4/__marimo__/session/: main.py.json
lab-5/: main.py
lab-5/__marimo__/session/: main.py.json
lab-6/: main.py
lab-6/__marimo__/session/: main.py.json
lab-7/: main.py
lab-8/: main.py
lab-8/__marimo__/session/: main.py.json
lab-9/: main.py
lab-9/__marimo__/session/: main.py.json
