[project]
name = "omstu-algorithms-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "marimo>=0.22.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
